client/src/pages/service/style.service.sass
.service-page
	display: flex
	flex-direction: column
	gap: 6rem
	overflow-y: auto

	.page-hero
		width: 100%
		height: min(500px, 100%)
		background-size: cover
		background-position: center
		display: flex
		flex-direction: column
		justify-content: center
		align-items: center
		flex: 0 0 auto

		.overlay
			$bgColor: hsl(0 0 100% / 0.8)
			$fgColor: hsl(0 0 30%)
			background-color: $bgColor
			color: $fgColor
			display: flex
			flex-direction: column
			justify-content: center
			align-items: center
			width: fit-content
			max-width: calc( 100% - 5rem )
			padding: 1rem 3rem
			border-radius: 1rem
			box-shadow: 0 0 10px 10px $bgColor
			box-sizing: border-box

			h1
				color: hsl(from $fgColor h s calc(l - 20))
				text-align: center

			p
				color: inherit
				font-size: 1.2rem

	.book-appointment
		display: flex
		flex-direction: row
		width: min(calc(100% - 2rem), 1000px)
		align-self: center

		img
			width: 50%
			object-fit: cover
			border-radius: 1rem

		.appointment-text
			display: flex
			flex-direction: column
			justify-content: center
			align-items: center
			padding: 2rem
			gap: 1.5rem

			h2
				font-size: clamp(1.5rem, 4vw, 2rem)
				font-weight: bold
				color: var(--bold-fg)
				align-self: center

			p
				font-size: clamp(1rem, 2vw, 1.2rem)
				color: var(--main-fg)
				line-height: 1.5

			.book-now-button
				padding: 0.75rem 1.5rem
				font-size: 1.2rem
				font-weight: bold
				color: var(--button-fg)
				background-color: var(--button-bg)
				border: none
				border-radius: 0.5rem
				cursor: pointer

		@media (max-width: 1000px)
			flex-direction: column !important
			align-items: center

			img
				width: 100%

